--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-Hello World
+---
+layout: layout
+---
 
-\nMy first blog will be to set ...
+{% include employment.html %}
+
+{% include education.html %}
+
+{% include skills.html %}
+
+{% include initiatives.html %}
+
+{% include interests.html %}
